# gpio_checker

./: CMakeLists.txt  README.md
src/: config.h  gpio_checker.c
